# NetNynjaEnterprise

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_COWORK_SKILLS_CHECK_20260213_1621.md  CODEXCHECK.md  CONTEXT.md  GO.md  HANDOFF.md  IssuesTracker.archive.md  IssuesTracker.md  Migration_GridWatch.md  PROJECT_STATUS.md  README.md  RELEASE.md  SPRINT_SEC_HARDENING.md  cosign.pub  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  seed-admin.sql  tsconfig.base.json
.github/workflows/: build-images.yml  release.yml  security-scan.yml  test.yml  validate-poetry.yml  validate-workspaces.yml
CODEX/: CODEX_APP_REVIEW20260110_083257.md  CODEX_REVIEW20260211-1027.md  CODEX_REVIEW20260211-1133.md  CODEX_REVIEW_20260112_091852.md  CODEX_REVIEW_20260114_085106.md  CODEX_REVIEW_20260115_155448.md  CODEX_REVIEW_20260131_062510.md  CODEX_SECURITY_REVIEW20260110_080253.md
CODEX/archive/: CODEX_REVIEW20260110_102326.md  CODEX_REVIEW_20260112_091852.md  CODEX_SECURITY_REVIEW20260110_080253.md
GEMINI/: GEMINI_CLI_REVIEW20260211-1146.md
Testing/: README.md  conftest.py  pytest.ini  requirements.txt  run_tests.sh  setup-nats-streams.ts  setup-test-users.ts  test_02_gateway.py  test_03_ipam.py  test_04_npm.py  test_06_integration.py  test_frontend.py
Testing/infrastructure/: preflight.sh  run-preflight.cmd
Testing/reports/: api-report-20260106_114607.html  api-test-report.html  frontend-report-20260106_145057.html  summary-20260106_145113.txt
apps/gateway/: Dockerfile  package.json  tsconfig.json  tsup.config.ts
apps/gateway/src/: config.ts  db.ts  index.ts  logger.ts  redis.ts  snmp.ts
apps/gateway/src/plugins/: auth.ts  background-poller.ts  error-handler.ts  loki-logging.ts  metrics.ts  otel.ts  rate-limit.ts  swagger.ts
apps/gateway/src/routes/: auth.ts  health.ts  users.ts
apps/gateway/src/routes/ipam/: index.ts  (+1 more)
apps/ipam/: Dockerfile  README.md  pyproject.toml
apps/ipam/scripts/: migrate_sqlite_to_postgres.py
apps/ipam/src/ipam/: __init__.py  main.py
apps/ipam/src/ipam/api/: __init__.py  health.py  routes.py
apps/ipam/src/ipam/collectors/: __init__.py  nats_handler.py
apps/ipam/src/ipam/core/: auth.py  config.py  logging.py
apps/ipam/src/ipam/db/: __init__.py  connection.py  repository.py
apps/ipam/src/ipam/models/: __init__.py  address.py  common.py  network.py  scan.py
apps/ipam/src/ipam/services/: __init__.py  metrics.py  network.py  scanner.py
apps/npm/: Dockerfile  README.md  pyproject.toml
apps/stig/: Dockerfile  README.md  pyproject.toml
apps/stig/src/stig/: main.py
apps/stig/src/stig/api/: routes.py
apps/stig/src/stig/collectors/: config_analyzer.py  ssh_auditor.py
apps/stig/src/stig/core/: config.py
apps/stig/src/stig/db/: repository.py
apps/stig/src/stig/models/: __init__.py  audit.py
apps/stig/src/stig/reports/: ckl.py  generator.py  pdf.py
apps/stig/src/stig/services/: audit.py  config_checker.py
apps/syslog/: Dockerfile  pyproject.toml
apps/syslog/src/syslog/: collector.py  config.py  forwarder.py  main.py
apps/web-ui/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
apps/web-ui/src/: App.tsx  index.css  main.tsx
apps/web-ui/src/lib/: api.ts
apps/web-ui/src/stores/: auth.ts  index.ts  ipam.ts  npm.ts  snmpv3-credentials.ts  stig.ts  theme.ts  users.ts
archive/sprint-history/: CLAUDE_COWORK_SKILLS_CHECK_20260213_1621.md  IssuesTracker.archive.md
charts/netnynja-enterprise/: Chart.yaml  README.md  values.yaml
charts/netnynja-enterprise/templates/: _helpers.tpl  gateway-deployment.yaml  ingress.yaml  secrets.yaml  serviceaccount.yaml  web-ui-deployment.yaml
docs/: CODE_SIGNING_GUIDE.md  CODE_SIGNING_LOCAL.md  DOCKER_STRUCTURE.md  GITHUB_TOKEN_SETUP.md  NetNynja_Executive_Summary_ISSO.html  SESSION_HISTORY.md  STIG_SELECTION_GUIDE.md
docs/audit/: 2026-01-18_CI_CD_Failure_Remediation.md
docs/design/: STIG-13-Multi-STIG-Selection.md
docs/security/: EXECUTIVE_SUMMARY.md  INPUT_SANITIZATION_AUDIT.md  PHASE_1B_ACTION_PLAN.md  POST_REMEDIATION_REPORT.md  REMEDIATION_CHECKLIST.md  SEC-012_URGENT_VULNERABILITIES.md  VULNERABILITY_SCAN_REPORT.md  VULNERABILITY_SUMMARY.md
infrastructure/coredns/: Corefile  README.md  hosts.local
infrastructure/grafana/dashboards/: npm-overview.json  stig-overview.json
infrastructure/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/grafana/provisioning/datasources/: datasources.yml
infrastructure/mibs/: README.md
infrastructure/mibs/mellanox/: MELLANOX-TC.mib
infrastructure/mibs/sophos/: SFOS-FIREWALL-MIB.txt
infrastructure/postgres/: init.sql
infrastructure/postgres/migrations/: 007_add_ipam_address_scan_info.sql  010_add_target_definitions.sql  013_fix_syslog_source_unique.sql
infrastructure/prometheus/: prometheus.yml
infrastructure/promtail/: promtail.yml
infrastructure/scripts/: init-vault.sh
infrastructure/vault/scripts/: setup-secrets.sh
scripts/: phase3-data-migration.ps1  phase6-repo-rename.ps1  validate-prod-env.sh
services/auth-service/: Dockerfile  package.json  tsup.config.ts
services/auth-service/src/: audit.ts  config.ts  db.ts  logger.ts  redis.ts  routes.ts  users.ts
services/shared-python/: pyproject.toml
services/shared-python/src/shared_python/: __init__.py  app_factory.py  config.py  database.py  health.py  logging.py
tests/e2e/: README.md  TestingE2E.docx  conftest.py  setup-nats-streams.ts  setup-test-users.ts  test_01_authentication.py  test_02_gateway.py  test_03_ipam.py  test_04_npm.py  test_05_stig.py  test_06_integration.py
tests/e2e/reports/: api-report-20260106_114644.html  api-report-20260106_145057.html  api-report-20260106_145113.html  api-test-report.html  frontend-report-20260106_114644.html  summary-20260106_114607.txt  summary-20260106_145057.txt
tests/infrastructure/: preflight.ps1  preflight.sh
tests/smoke/: macos-arm64-smoke-test.sh  macos-x64-smoke-test.sh  rhel9-smoke-test.sh  windows-smoke-test.ps1
tests/smoke/results/: macos-arm64-20260107.json  rhel9-20260107.json  windows-20260108-125400.json
(+30 files in other folders)
